# StarryClaw

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
scripts/: starryclaw-agent.sh
src/: c_http_client.c  intent.rs  main.rs  openai.rs  tools.rs
test/: starryclaw_agent.py
