[package]
name = "starryclaw"
version = "0.1.0"
edition = "2021"
description = "Minimal agent for StarryOS with OpenAI-compatible tool calling (ls / mkdir)"

[[bin]]
name = "starryclaw"
path = "src/main.rs"

[profile.release]
# 与 musl 全静态链接配合，避免依赖 libgcc 的 unwinder（_Unwind_*）
panic = "abort"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[build-dependencies]
cc = "1"
